--- a/styles.css
+++ b/styles.css
@@ -93,15 +93,15 @@ body {
     }
 
     .header {
-        grid-column: span 12;
+        grid-column: 4 / span 6; /* Ocupa las 6 columnas centrales */
     }
 
     .intro, .additional-text {
-        grid-column: 4 / span 6;
+        grid-column: 4 / span 6; /* Ocupa las 6 columnas centrales */
     }
 
     .chart-title, .chart-description, .chart-container, .additional-chart-container {
-        grid-column: 4 / span 6;
+        grid-column: 4 / span 6; /* Ocupa las 6 columnas centrales */
     }
 
     .footer {
@@ -119,15 +119,15 @@ body {
     }
 
     .header {
-        grid-column: span 6;
+        grid-column: 1 / span 6; /* Ocupa las 6 columnas */
     }
 
     .intro, .additional-text {
-        grid-column: 2 / span 6;
+        grid-column: 1 / span 6; /* Ocupa las 6 columnas */
     }
 
     .chart-title, .chart-description, .chart-container, .additional-chart-container {
-        grid-column: 2 / span 6;
+        grid-column: 1 / span 6; /* Ocupa las 6 columnas */
     }
 
     .footer {
@@ -145,15 +145,15 @@ body {
     }
 
     .header {
-        grid-column: span 2;
+        grid-column: span 2; /* Ocupa las 2 columnas */
     }
 
     .intro, .additional-text {
-        grid-column: span 2;
+        grid-column: span 2; /* Ocupa las 2 columnas */
     }
 
     .chart-title, .chart-description, .chart-container, .additional-chart-container {
-        grid-column: span 2;
+        grid-column: span 2; /* Ocupa las 2 columnas */
     }
 
     .footer {
